--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.2.10"
+    "mongoose": "^6.2.10",
+    "multer": "^1.4.4"
   }
 }
