--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
