--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.2.10",
     "multer": "^1.4.4",
-    "nodemailer": "^6.7.3"
+    "nodemailer": "^6.7.3",
+    "socket.io": "^4.4.1"
   }
 }
